# jscot-hazel

./: .gitignore
cpp_function_finder/: finder.py
hazel/: CMakeLists.txt
hazel/jscot-hazel/: CMakeLists.txt
hazel/jscot-hazel-demo/: CMakeLists.txt
hazel/jscot-hazel-demo/src/: main.cpp
hazel/jscot-hazel/include/: bind_js.h  bind_param.h  bind_return.h  imgui_typedef.h  jscot_hazel.h
hazel/jscot-hazel/src/: bind_imgui_duktape.cpp  bind_imgui_duktape.h  bind_imgui_generate.cpp  bind_imgui_generate.h  jscot_hazel.cpp
hazel/script/: main.js
hazel/src/: bind_js.h  bind_param.h  main.cpp
quick_js_binding/: CMakeLists.txt  main.cpp
quick_js_binding/lib/x64/: quickjs.lib
test_js_binding/: CMakeLists.txt  main.cpp
tscot_hazel/: tsconfig.json
tscot_hazel/dest/: main.js  main.js.map
tscot_hazel/src/: main.ts
tscot_hazel/src/declear/: duktape.d.ts  imgui.d.ts
